# factisio

./: .gitignore  Cargo.toml  README.md
gql-to-pgsql/: Cargo.toml  README.md
graphql-to-postgres/: Cargo.toml  README.md
model/: Cargo.toml  README.md
model-cache/: Cargo.toml  README.md
model-cache/src/: entity_cache.rs  field_cache.rs  lib.rs
model-cache/src/snapshots/: factisio_model_cache__entity_cache__tests__constructor-2.snap  factisio_model_cache__entity_cache__tests__constructor.snap  factisio_model_cache__entity_cache__tests__constructor.snap.new  factisio_model_cache__entity_cache__tests__serialize.snap  factisio_model_cache__entity_cache__tests__serialize.snap.new  factisio_model_cache__field_cache__tests__serialize.snap
model/src/: entity.rs  field.rs  json_schema.rs  lib.rs  model.rs
server/: Cargo.toml
src/: main.rs
typescript/src/__data__/: config1.ts
typescript/src/connectors/: postgres.ts
typescript/src/indexed-config/__tests__/: generate-indexed-config.ts.ts
wasm/: Cargo.toml  README.md  readme.md
web-native/: Cargo.toml
