[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "factisio"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factisio_gql_to_pgsql = {version = "0.1.0", path = "./gql-to-pgsql"}
factisio_model = {version = "0.1.0", path = "./model"}
factisio_model_cache = {version = "0.1.0", path = "./model-cache"}
factisio_server = {version = "0.1.0", path = "./server"}
factisio_wasm = {version = "0.1.0", path = "./wasm"}

[dev-dependencies]
# cargo-insta = {version = "1.8.0"}
# cargo-watch = {version = "8.1.1"}
# wasm-pack = {version = "0.10.1"}

[workspace]
members = [
  "gql-to-pgsql",
  "server",
  "model",
  "model-cache",
  "wasm",
]
