[package]
name = "factisio_graphql_to_postgres"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
graphql-parser = { version = "0.3.0" }
handlebars = { version = "4.1.3" }
scooby = { version = "0.4.0" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68"}