[package]
edition = "2018"
name = "factisio_model"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
postgres = "0.19.2"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = {version = "1.0.68"}
serde_test = {version = "1.0.130"}
